--- a/src/pages/ride-details/ride-details.css
+++ b/src/pages/ride-details/ride-details.css
@@ -26,7 +26,8 @@
 .ride-details .content .box {
   margin-bottom: 10px;
   width: 47% !important;
-  margin-right: 15px !important;
+  margin-right: 0 !important;
+  font-size: 14px;
 }
 
 .ride-details .content label {
@@ -58,4 +59,18 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   margin-bottom: 10px;
+}
+
+.ride-details .footprint {
+  padding: 5px;
+  color: #fff;
+  border-radius: 5px;
+  background-color: #04AA6D;
+  opacity: 1;
+  animation: fade 2s infinite linear;
+}
+
+@keyframes fade {
+  0%,100% { opacity: 0 }
+  50% { opacity: 1 }
 }
