--- a/src/App.css
+++ b/src/App.css
@@ -40,11 +40,25 @@ button {
 
 .container {
   margin-top: 50px;
-  height: 90vh;
+  height: auto;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: url('./images/carpool-bg.jpg') no-repeat;
+  background-size: cover;
+  padding: 2%;
+  min-height: 90vh;
+}
+
+.main-content {
+  width: 800px;
+  margin: 0 auto;
+  background: #fff;
+  padding: 10px;
+  height: 100%;
+  border-radius: 5px;
 }
 
 .box {
