--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -4,12 +4,16 @@
 
 .dashboard .container {
   margin-top: 0;
+  height: 90vh;
 }
 
 .dashboard .top-section {
   position: relative;
   text-align: center;
   margin-bottom: 20px;
+  background: #fff;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 .dashboard .top-section .street {
