--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -1,5 +1,27 @@
+.dashboard .container .box {
+  width: 320px;
+  min-height: 350px;
+}
+
 .dashboard .container .box button {
   margin: 10px;
+  height: 140px;
+  border-radius: 50%;
+  width: 140px;
+  color: #04AA6D;
+  background: #fff;
+  font-size: 11px;
+  padding: 0;
+}
+
+.dashboard .container .box button:hover {
+  border: 4px solid #04AA6D;
+  font-size: 12px;
+}
+
+.dashboard .container .box button img {
+  height: 40px;
+  margin-bottom: 8px;
 }
 
 .dashboard .container {
